A vai a merda PORRAAAAAAAAAA A NOITE TODA PODIA TA ESTUDANDO PRAS PROVA A NOITE TODA TENTANDO CONSERTAR ESSA MERDA DE REALOCAÇÃO E NADA NADA NADICA CONTINUA TAO BUGADO QUANDO ANTES VAI A MERDA POOOOOOOOOOOOOOOOORRRAAAAAAAAAAAAAAAAAAAAAAA EU TO LOCO?